--- a/index.html
+++ b/index.html
@@ -2,8 +2,15 @@
 <html lang="fr">
   <head>
     <meta charset="utf-8" />
+    <meta name="author" content="Abdou-baki YAYA" />
+    <meta name="keywords" content="Association, Education, Enfant" />
+    <meta
+      name="description"
+      content="Nous oeuvrons pour l'éducation des enfants dans les quartiers défavorisés"
+    />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Education Pour Tous</title>
+    <title>ALLER A L'ECOLE</title>
     <!-- icones font awesome cdn -->
     <link
       rel="stylesheet"
@@ -30,11 +37,11 @@
             <nav class="navbar navbar-expand-lg position-fixed z-3">
               <div class="container-fluid">
                 <a
-                  class="navbar-brand pt-0 fst-italic fs-5"
+                  class="navbar-brand pt-0 fst-italic fs-5 bg-dark-subtle p-2"
                   href="index.html"
                   style="font-weight: 700"
-                  ><span class="text-success title-mobile-E">E</span
-                  ><span class="title-mobile">ducation Pour Tous</span></a
+                  ><span class="text-success title-mobile-E">A</span
+                  ><span class="title-mobile">LLER A L'ECOLE</span></a
                 >
                 <button
                   class="navbar-toggler"
@@ -52,7 +59,10 @@
                   class="offcanvas offcanvas-end d-flex flex-row-reverse"
                   id="navbarSupportedContent"
                 >
-                  <div class="offcanvas-header mt-3" style="height: 30px">
+                  <div
+                    class="offcanvas-header btn-close-bg mt-3"
+                    style="height: 30px"
+                  >
                     <button
                       type="button"
                       class="btn-close"
@@ -101,29 +111,29 @@
       <section>
         <div class="container"></div>
       </section>
-
+      <!-- animation banniere  -->
       <section>
-        <div class="">
-          <div class="">
+        <div class="content-banniere">
+          <div class="banniere">
             <div class="image-container z-2">
               <img class="" src="img7.jpg" alt="Image 1" />
               <img class="" src="img1.jpg" alt="Image 2" />
-              <img class="" src="img4.jpg" alt="Image 3" />
+              <img class="" src="img3.jpg" alt="Image 3" />
               <img class="" src="img2.jpg" alt="Image 3" />
               <span class="text-container overflow-hidden">
                 <div class=""></div>
                 <p
-                  class="animated-text animated-text-first bg-info w-50 m-auto"
+                  class="animated-text animated-text-first bg-info-subtle w-50 m-auto"
                 >
                   EducationPourTous
                 </p>
                 <p
-                  class="animated-text animated-text-second bg-warning w-50 m-auto"
+                  class="animated-text animated-text-second bg-warning-subtle w-50 m-auto"
                 >
                   ÉducationÉquitable
                 </p>
                 <p
-                  class="animated-text animated-text-third bg-success w-50 m-auto"
+                  class="animated-text animated-text-third bg-success-subtle w-50 m-auto"
                 >
                   EnfantsDuFutur
                 </p>
@@ -226,10 +236,10 @@
             </div>
             <div class="col-md-6">
               <div class="card-body">
-                <h5 class="card-title fw-bold text-danger m-1">
+                <h1 class="card-title fs-5 fw-bold text-danger m-1">
                   Ensemble, construisons un avenir meilleur grâce à l'éducation
                   !
-                </h5>
+                </h1>
                 <p class="card-text m-4">
                   Rejoignez-nous lors de ces événements exceptionnels et
                   contribuez à offrir aux enfants des quartiers défavorisés des
@@ -333,6 +343,7 @@
           </div>
         </div>
       </section>
+      <!-- evenementiel  -->
       <section>
         <div class="container pt-5">
           <div class="row">
@@ -448,8 +459,9 @@
       </section>
     </main>
     <footer>
-      <section class="bg-light pt-4" style="margin-top: 80px">
-        <div class="container-fluid">
+      <section class="pt-4" style="margin-top: 80px">
+        <div class="container-fluid bg-light">
+          <hr />
           <div class="row">
             <div
               class="col-sm-6 my-auto p-3 justify-content-center d-flex col-md-4"
@@ -593,7 +605,7 @@
               <h5>Contact</h5>
               <div class="">
                 <address>
-                  <span><strong>Education Pour Tous</strong></span
+                  <span><strong>Aller à l'école</strong></span
                   ><br />
                   <span>0033 0 00 00 00 00</span><br />
                   <span>00 Rue adress</span><br />
@@ -607,7 +619,7 @@
                 <a
                   class="fa-brands text-info fa-linkedin fa-2x m-2"
                   title="LinkedIn"
-                  href="http://"
+                  href="#"
                 ></a>
                 <a
                   class="fa-brands fa-facebook-square fa-2x m-2"
@@ -617,18 +629,20 @@
                 <a
                   class="fa-brands text-danger fa-instagram-square fa-2x m-2"
                   title="Instagram"
-                  href="http://"
+                  href="#"
                 ></a>
                 <a
                   class="fa-brands text-info fa-twitter-square fa-2x m-2"
                   title="Twitter"
-                  href="http://"
+                  href="#"
                 ></a>
               </div>
               <div class="pt-2 content-copirigtht" style="font-size: 5px">
                 <p>
-                  &copy; 2023 educationpourtous. Tous droits réservés.
-                  <a class="" href="http://">Politique de confidentialité</a>.
+                  &copy; 2023 aller-a-lecole. Tous droits réservés.
+                  <a class="text-decoration-none" href="#"
+                    >Politique de confidentialité</a
+                  >.
                 </p>
               </div>
             </div>
