--- a/nous_contacter.html
+++ b/nous_contacter.html
@@ -2,8 +2,15 @@
 <html lang="fr">
   <head>
     <meta charset="utf-8" />
+    <meta name="author" content="Abdou-baki YAYA" />
+    <meta name="keywords" content="Association, Education, Enfant" />
+    <meta
+      name="description"
+      content="Nous oeuvrons pour l'éducation des enfants dans les quartiers défavorisés"
+    />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Education Pour Tous</title>
+    <title>ALLER A L'ECOLE</title>
     <!-- icones font awesome cdn -->
     <link
       rel="stylesheet"
@@ -30,11 +37,11 @@
             <nav class="navbar navbar-expand-lg position-fixed z-3">
               <div class="container-fluid">
                 <a
-                  class="navbar-brand pt-0 fst-italic fs-5"
+                  class="navbar-brand pt-0 fst-italic fs-5 bg-dark-subtle p-2"
                   href="index.html"
                   style="font-weight: 700"
-                  ><span class="text-success title-mobile-E">E</span
-                  ><span class="title-mobile">ducation Pour Tous</span></a
+                  ><span class="text-success title-mobile-E">A</span
+                  ><span class="title-mobile">LLER A L'ECOLE</span></a
                 >
                 <button
                   class="navbar-toggler"
@@ -52,7 +59,10 @@
                   class="offcanvas offcanvas-end d-flex flex-row-reverse"
                   id="navbarSupportedContent"
                 >
-                  <div class="offcanvas-header mt-3" style="height: 30px">
+                  <div
+                    class="offcanvas-header btn-close-bg mt-3"
+                    style="height: 30px"
+                  >
                     <button
                       type="button"
                       class="btn-close"
@@ -101,125 +111,14 @@
       <section>
         <div class="container"></div>
       </section>
-
-      <!-- <section>
-        <div class="">
-          <div class="">
-            <div class="image-container z-2">
-              <img class="" src="img7.jpg" alt="Image 1" />
-              <img class="" src="img1.jpg" alt="Image 2" />
-              <img class="" src="img4.jpg" alt="Image 3" />
-              <img class="" src="img2.jpg" alt="Image 3" />
-              <span class="text-container overflow-hidden">
-                <div class=""></div>
-                <p
-                  class="animated-text animated-text-first bg-info w-50 m-auto"
-                >
-                  EducationPourTous
-                </p>
-                <p
-                  class="animated-text animated-text-second bg-warning w-50 m-auto"
-                >
-                  ÉducationÉquitable
-                </p>
-                <p
-                  class="animated-text animated-text-third bg-success w-50 m-auto"
-                >
-                  EnfantsDuFutur
-                </p>
-              </span>
-            </div>
-          </div>
-        </div>
-      </section> -->
     </header>
-    <!-- <header style="margin-bottom: 10%">
-      <section>
-        <div class="container-fluid">
-          <div class="row">
-            <nav
-              class="navbar bg-dark-subtle navbar-expand-lg position-fixed z-3 bg-body-tertiary"
-            >
-              <div class="container-fluid">
-                <a
-                  class="navbar-brand pt-0 fst-italic fs-5"
-                  href="index.html"
-                  style="font-weight: 700"
-                  ><span class="fs-1 text-success">E</span>ducation Pour Tous</a
-                >
-                <button
-                  class="navbar-toggler"
-                  type="button"
-                  data-bs-toggle="offcanvas"
-                  data-bs-target="#navbarSupportedContent"
-                  aria-controls="navbarSupportedContent"
-                  aria-expanded="false"
-                  aria-label="Toggle navigation"
-                >
-                  <span class="navbar-toggler-icon"></span>
-                </button>
-                <div
-                  style="width: 70%"
-                  class="offcanvas offcanvas-end d-flex flex-row-reverse"
-                  id="navbarSupportedContent"
-                >
-                  <div class="offcanvas-header mt-3" style="height: 30px">
-                    <button
-                      type="button"
-                      class="btn-close"
-                      data-bs-dismiss="offcanvas"
-                      aria-label="Close"
-                    ></button>
-                  </div>
-                  <div class="offcanvas-body">
-                    <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                      <li class="nav-item">
-                        <a
-                          class="nav-link active fw-semibold"
-                          aria-current="page"
-                          href="index.html"
-                          >Accueil</a
-                        >
-                      </li>
-                      <li class="nav-item">
-                        <a
-                          class="nav-link active text-nowrap fw-semibold"
-                          href="qui_sommes_nous.html"
-                          >Qui sommes-nous ?</a
-                        >
-                      </li>
-                      <li class="nav-item">
-                        <a
-                          class="nav-link active text-nowrap fw-semibold"
-                          href="nous_contacter.html"
-                          >Nous contacter</a
-                        >
-                      </li>
-                    </ul>
-                    <a
-                      class="btn btn-success btn-navbar"
-                      href="fair-un-don.html"
-                    >
-                      Fair un don
-                    </a>
-                  </div>
-                </div>
-              </div>
-            </nav>
-          </div>
-        </div>
-      </section>
-      <section>
-        <div class="container"></div>
-      </section>
-    </header> -->
-    <main class="">
+    <main>
       <section class="bg-light pt-5 pb-5">
         <div class="container" style="padding-left: 30px">
           <div class="pb-5 m-auto">
-            <h5 style="margin-left: -12px">
-              Contactez <strong>Ecole Pour Tous</strong> via le formulaire
-            </h5>
+            <h1 class="fs-5" style="margin-left: -12px">
+              Contactez <strong>aller à l'école</strong> via le formulaire
+            </h1>
           </div>
           <div class="row">
             <div
@@ -249,7 +148,6 @@
                     placeholder="Nom"
                     required
                   />
-                  <div class="valid-tooltip">Looks good!</div>
                 </div>
                 <div class="col-md-4 position-relative">
                   <label for="validationTooltip03" class="form-label"
@@ -262,9 +160,6 @@
                     placeholder="Ville"
                     required
                   />
-                  <div class="invalid-tooltip">
-                    Please provide a valid city.
-                  </div>
                 </div>
                 <div class="col-md-6 position-relative">
                   <label for="validationTooltipUsername" class="form-label"
@@ -285,9 +180,6 @@
                       aria-describedby="validationTooltipUsernamePrepend"
                       required
                     />
-                    <div class="invalid-tooltip">
-                      Please choose a unique and valid username.
-                    </div>
                   </div>
                 </div>
                 <div class="col-md-6 position-relative">
@@ -301,9 +193,6 @@
                     <option value="3">Je veux dévenir bénévol</option>
                     <option value="4">Autres</option>
                   </select>
-                  <div class="invalid-tooltip">
-                    Please select a valid state.
-                  </div>
                 </div>
                 <div class="mb-3">
                   <label for="exampleFormControlTextarea1" class="form-label"
@@ -328,9 +217,6 @@
                     <label class="form-check-label" for="invalidCheck">
                       Accepter les termes et conditions
                     </label>
-                    <div class="invalid-feedback">
-                      Vous devez accepter avant de soumettre.
-                    </div>
                   </div>
                 </div>
                 <div class="col-12">
@@ -341,17 +227,16 @@
               </form>
             </div>
             <div class="bg-contact bg-warning">
-              <div class="bg-contact">
-                <!-- <img class="img-fluid" src="/img5.jpg" alt="" />  -->
-              </div>
+              <div class="bg-contact"></div>
             </div>
           </div>
         </div>
       </section>
     </main>
     <footer>
-      <section class="bg-light pt-4" style="margin-top: 80px">
-        <div class="container-fluid">
+      <section class="pt-4" style="margin-top: 80px">
+        <div class="container-fluid bg-light">
+          <hr />
           <div class="row">
             <div
               class="col-sm-6 my-auto p-3 justify-content-center d-flex col-md-4"
@@ -482,7 +367,7 @@
                   </div>
                 </div>
               </div>
-              <div class="">
+              <div>
                 <a
                   class="btn btn-outline-success fw-semibold btn-navbar"
                   href="fair-un-don.html"
@@ -493,9 +378,9 @@
             </div>
             <div class="col-sm-6 col-md-4">
               <h5>Contact</h5>
-              <div class="">
+              <div>
                 <address>
-                  <span><strong>Education Pour Tous</strong></span
+                  <span><strong>Aller à l'école</strong></span
                   ><br />
                   <span>0033 0 00 00 00 00</span><br />
                   <span>00 Rue adress</span><br />
@@ -509,7 +394,7 @@
                 <a
                   class="fa-brands text-info fa-linkedin fa-2x m-2"
                   title="LinkedIn"
-                  href="http://"
+                  href="#"
                 ></a>
                 <a
                   class="fa-brands fa-facebook-square fa-2x m-2"
@@ -519,18 +404,20 @@
                 <a
                   class="fa-brands text-danger fa-instagram-square fa-2x m-2"
                   title="Instagram"
-                  href="http://"
+                  href="#"
                 ></a>
                 <a
                   class="fa-brands text-info fa-twitter-square fa-2x m-2"
                   title="Twitter"
-                  href="http://"
+                  href="#"
                 ></a>
               </div>
               <div class="pt-2 content-copirigtht" style="font-size: 5px">
                 <p>
                   &copy; 2023 educationpourtous. Tous droits réservés.
-                  <a class="" href="http://">Politique de confidentialité</a>.
+                  <a class="text-decoration-none" href="#"
+                    >Politique de confidentialité</a
+                  >.
                 </p>
               </div>
             </div>
