--- a/qui_sommes_nous.html
+++ b/qui_sommes_nous.html
@@ -2,8 +2,15 @@
 <html lang="fr">
   <head>
     <meta charset="utf-8" />
+    <meta name="author" content="Abdou-baki YAYA" />
+    <meta name="keywords" content="Association, Education, Enfant" />
+    <meta
+      name="description"
+      content="Nous oeuvrons pour l'éducation des enfants dans les quartiers défavorisés"
+    />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Education Pour Tous</title>
+    <title>ALLER A L'ECOLE</title>
     <!-- icones font awesome cdn -->
     <link
       rel="stylesheet"
@@ -30,11 +37,11 @@
             <nav class="navbar navbar-expand-lg position-fixed z-3">
               <div class="container-fluid">
                 <a
-                  class="navbar-brand pt-0 fst-italic fs-5"
+                  class="navbar-brand pt-0 fst-italic fs-5 bg-dark-subtle p-2"
                   href="index.html"
                   style="font-weight: 700"
-                  ><span class="text-success title-mobile-E">E</span
-                  ><span class="title-mobile">ducation Pour Tous</span></a
+                  ><span class="text-success title-mobile-E">A</span
+                  ><span class="title-mobile">LLER A L'ECOLE</span></a
                 >
                 <button
                   class="navbar-toggler"
@@ -52,7 +59,10 @@
                   class="offcanvas offcanvas-end d-flex flex-row-reverse"
                   id="navbarSupportedContent"
                 >
-                  <div class="offcanvas-header mt-3" style="height: 30px">
+                  <div
+                    class="offcanvas-header btn-close-bg mt-3"
+                    style="height: 30px"
+                  >
                     <button
                       type="button"
                       class="btn-close"
@@ -98,27 +108,15 @@
           </div>
         </div>
       </section>
-      <!-- <section>
-        <div>
-          <div class="">
-            <div class="image-container">
-              <img class="" src="img2.jpg" alt="Image 1" />
-              <img class="" src="img1.jpg" alt="Image 2" />
-              <img class="" src="img4.jpg" alt="Image 3" />
-              <img class="" src="img7.jpg" alt="Image 3" />
-            </div>
-          </div>
-        </div>
-      </section> -->
     </header>
     <div class="wrapper d-lg-flex pt-5">
       <main class="col-12 col-md-12 col-lg-7 mx-auto pb-5">
         <section>
           <div class="container qui-sommes-nous pb-3">
             <div class="row">
-              <h5 class="pb-5 text-primary fw-bold">
-                Bienvenue sur le site de notre association Éducation pour Tous !
-              </h5>
+              <h1 class="pb-5 text-primary fs-5 fw-bold">
+                Bienvenue sur le site de notre association Aller à l'école !
+              </h1>
               <div class="">
                 <div class="card border-0 bg-success-subtle mb-3">
                   <div class="row g-0">
@@ -147,7 +145,7 @@
                       <div class="card-body">
                         <h5 class="card-title">Notre engagement</h5>
                         <p class="card-text">
-                          À "Éducation pour Tous", nous croyons en l'égalité des
+                          Chez "Aller à l'école", nous croyons en l'égalité des
                           chances pour tous les enfants. Nous travaillons sans
                           relâche pour offrir un accès équitable à l'éducation,
                           en comblant le fossé qui sépare les quartiers
@@ -202,7 +200,7 @@
                         </p>
                         <p class="card-text fst-italic">
                           <small class="text-success fw-bold"
-                            >L'équipe "Éducation pour Tous</small
+                            >L'équipe "Aller à l'école"</small
                           >
                         </p>
                       </div>
@@ -351,8 +349,8 @@
                   </div>
                 </div>
               </div>
-              <div class="card-footer text-body-secondary">
-                Education Pour Tous
+              <div class="card-footer text-body-secondar fw-bold text-success">
+                #EducationPourTous #ÉducationÉquitable #EnfantsDuFutur
               </div>
             </div>
           </div>
@@ -453,8 +451,9 @@
       </article>
     </div>
     <footer>
-      <section class="bg-light pt-4" style="margin-top: 80px">
-        <div class="container-fluid">
+      <section class="pt-4" style="margin-top: 80px">
+        <div class="container-fluid bg-light">
+          <hr />
           <div class="row">
             <div
               class="col-sm-6 my-auto p-3 justify-content-center d-flex col-md-4"
@@ -598,7 +597,7 @@
               <h5>Contact</h5>
               <div class="">
                 <address>
-                  <span><strong>Education Pour Tous</strong></span
+                  <span><strong>Aller à l'école</strong></span
                   ><br />
                   <span>0033 0 00 00 00 00</span><br />
                   <span>00 Rue adress</span><br />
@@ -612,28 +611,27 @@
                 <a
                   class="fa-brands text-info fa-linkedin fa-2x m-2"
                   title="LinkedIn"
-                  href="http://"
+                  href="#"
                 ></a>
                 <a
                   class="fa-brands fa-facebook-square fa-2x m-2"
                   title="Facebook"
                   href="#"
                 ></a>
-                <a
-                  class="fa-brands text-danger fa-instagram-square fa-2x m-2"
-                  title="Instagram"
-                  href="http://"
-                ></a>
+                <a class="fa-brands text-danger fa-instagram-square fa-2x m-2"
+                title="Instagram" href="#
                 <a
                   class="fa-brands text-info fa-twitter-square fa-2x m-2"
                   title="Twitter"
-                  href="http://"
+                  href="#"
                 ></a>
               </div>
               <div class="pt-2 content-copirigtht" style="font-size: 5px">
                 <p>
-                  &copy; 2023 educationpourtous. Tous droits réservés.
-                  <a class="" href="http://">Politique de confidentialité</a>.
+                  &copy; 2023 aller-a-lecole. Tous droits réservés.
+                  <a class="text-decoration-none" href="#"
+                    >Politique de confidentialité</a
+                  >.
                 </p>
               </div>
             </div>
